# Datasmith

./: .dockerignore  .gitignore  docker-compose.yml
backend-py/: requirements.txt
backend-py/app/: main.py
backend-py/app/models/: __init__.py  schemas.py
backend-py/app/routes/: __init__.py  mainRoutes.py
backend-py/app/services/: __init__.py  analysis_service.py  field_detector.py  service.py
backend-py/app/services/analyzers/: __init__.py  analyze_boolean.py  analyze_currency.py  analyze_id.py  analyze_numeric.py  analyze_string.py  date_analysis.py
backend-py/app/utils/: __init__.py  file_handlers.py
cpp-mod/: CMakeLists.txt  data.csv  main.cpp
cpp-mod/src/: dataframe.cpp  dataframe.h
cpp-mod/src/analyzers/: cols_analyzer.cpp  cols_analyzer.h  rows_analyzer.cpp
docker/: Dockerfile.backend  Dockerfile.frontend
frontend-ts/: package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend-ts/src/: App.tsx  index.css  main.tsx  types.tsx
frontend-ts/src/components/: AppBar.tsx  createGraphModal.tsx  fileView.tsx  overview.tsx
frontend-ts/src/functions/: fileHandler.ts
frontend-ts/src/hooks/: useThemeManager.ts
frontend-ts/src/screens/: analysisScreen.tsx  homeScreen.tsx
frontend-ts/src/store/: index.ts  mainSlice.tsx  parseFileAsync.tsx
scripts/: start_dev.sh
